Modulo de categorias terminado (controller, request, model, migration)
